# pyrekit

./: .gitignore  README.md  pyproject.toml  pyrekit.py  pyrekit_server.py  pyrekit_setup.py  requirements.txt  requirements_linux.txt  setup.py
src/pyrekit/: cli.py  files.py  handlers.py  server.py  setup_handler.py
