# pyproject.toml

# This section defines the build system tools, telling pip how to build your package.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This section contains all the project metadata, replacing the setup() function.
[project]
name = "pyrekit"
version = "0.1.0"
authors = [
  { name = "TuTheWeeb", email = "eduardo.tuler@gmail.com" },
]
description = "A toolkit to create react apps with python backend and includes pywebview to make desktop apps."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# This is where you list your project's dependencies.
# It directly replaces the 'install_requires' list.
dependencies = [
    "beautifulsoup4>=4.12.0",
    "Flask>=2.3.0",
    "Flask-Cors>=4.0.0",
    "watchdog>=3.0.0",
    "pywebview>=4.0.0",
    "requests",
]

# This section is for project-related URLs.
[project.urls]
"Homepage" = "https://github.com/TuTheWeeb/pyrekit"
"Repository" = "https://github.com/TuTheWeeb/pyrekit"

# This section defines command-line scripts, replacing 'entry_points'.
[project.scripts]
pyrekit = "pyrekit.cli:main"

# This section is for tool-specific configurations.
# 'include_package_data' is a setuptools option, so it goes here.
# The 'packages' find directive is now the default and doesn't need to be specified.
[tool.setuptools]
include-package-data = true
